@@ -1,0 +1,9 @@
+package Bar;
+
+use strict;
+use warnings;
+
+use Moo;
+extends 'Code::TidyAll::Plugin';
+
+1;
